# opencv_camera

./: .gitignore  LICENSE  pyproject.toml  readme.md
.github/workflows/: python.yaml
dev/calibration/: test.ipynb
dev/distortion/: vcam.py
docs/: references.md
docs/jupyter/3d-projection/: stereo-projection.ipynb
docs/jupyter/ChArUco/: aruco-calibration.ipynb
docs/jupyter/ChArUco-calibration/: camera.yml  undistort.ipynb
docs/jupyter/ChArUco-stereo-calibration/: aruco-calibration.ipynb  helpers.py
docs/jupyter/apriltag-calibration/: calibration.ipynb
docs/jupyter/apriltag-detection/: detect-apriltag.ipynb
docs/jupyter/apriltag-stereo-calibration/: calibration.ipynb
docs/jupyter/blur/: blurry.ipynb
docs/jupyter/calibration-chessboard-mono/: calibration.ipynb  camera.yml
docs/jupyter/calibration-chessboard-stereo/: camera.yml
docs/jupyter/calibration-opencv-basics/: stereo.ipynb
docs/jupyter/camera-calibration/pinhole-camera/: camera-calibration-pinhole-v2.ipynb  camera-calibration-pinhole.ipynb  stereo.ipynb
docs/jupyter/camera-calibration/stereo-camera/: camera-cal-alt.ipynb  camera-calibration-stereo.ipynb  grab.py  test-stereo.ipynb  test.py
docs/jupyter/chessboard-stereo-calibration/: stereo-model.ipynb
docs/jupyter/compress/: compress.ipynb
docs/jupyter/numpy-camera/: numpy-camera.ipynb
docs/jupyter/opencv_camera/: opencv_camera.ipynb
docs/jupyter/sizing-calibration-targets/: calibration-sizing-apriltag.ipynb
opencv_camera/: __init__.py  blurry.py  camera_calibrate.py  color_space.py  compression.py  display.py  distortion.py  mjpeg_server.py  object_detection.py  pointcloud.py  reproject.py  save.py  save_pointcloud.py  stereo_calibrate.py  stereo_camera.py  threaded_camera.py  undistort.py
opencv_camera/apriltag/: apriltag_detections.py  apriltag_marker.py  calibrate.py
opencv_camera/display/: epipolar.py  flip_book.py  lines.py  stereo.py
opencv_camera/mono/: calibrate.py  camera.py
opencv_camera/parameters/: ex8029.py  rpi_hq.py  rpi_v2.py  utils.py
opencv_camera/save/: pointcloud.py  video.py
opencv_camera/stereo/: calibrate.py  camera.py  fundamental_matrix.py  pointcloud.py  utils.py
opencv_camera/targets/: apriltags.py  chessboard.py
tests/: test_cv_camera.py
