##############################################
# The MIT License (MIT)
# Copyright (c) 2014 Kevin Walchko
# see LICENSE for full details
##############################################

[tool.poetry]
name = "opencv_camera"
version = "0.10.6"
description = "An OpenCV camera library"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/opencv_camera/"
repository = 'https://github.com/MomsFriendlyRobotCompany/opencv_camera'
# documentation = "http://..."
keywords = ['computer vision', 'camera', "calibration", 'opencv']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

[tool.poetry.scripts]
opencv_calibrate = "opencv_camera.bin.camera_calibrate:main"
opencv_mjpeg = "opencv_camera.bin.mjpeg_server:main"
opencv_capture = "opencv_camera.bin.video_capture:main"
udp_server = "opencv_camera.bin.udp_server:main"
udp_client = "opencv_camera.bin.udp_client:main"

[tool.poetry.dependencies]
python = ">=3.6"
colorama = "*"
simplejson = "*"
numpy = "*"
pyyaml = "*"
opencv_python = "*"
slurm = "*"
importlib-metadata = {version="*", python="<3.8"}

[tool.poetry.dev-dependencies]
pytest = "*"
# mypy = "*"

# [mypy-pi_servo_serial]
# ignore_missing_imports = True

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
